# oto

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix
src/: backend.rs  decoder.rs  device.rs  error.rs  lib.rs  player.rs  queue.rs  rodio_backend.rs  voice.rs
tests/: engine_mock.rs
